Add site main search section to the project

--- a/index.html
+++ b/index.html
@@ -33,6 +33,24 @@
     </div>
   </header>
 
+  <!-- SITE MAIN  -->
+
+  <main class="main-content">
+      <div class="container">
+             <form class="filters" action="https://echo.htmlacademy.ru" method="get" >
+                   <input class="filter-search-input" type="search" name="search" placeholder="Search for a country…" aria-label="Country name" required>
+                   <select class="filter-region-select" name="region" aria-label="Region">
+                    <option selected disabled >Filter by Region</option>
+                       <option>Brazil</option>
+                       <option>Amerika</option>
+                       <option>Iceland</option>
+                       <option>Asia</option>
+                       <option>Europa</option>
+                       <option>Oceania</option>
+                   </select>
+             </form>
+      </div>
+  </main>
 
 
   <script src="js/main.js"></script>
