Add site html cods

--- a/index.html
+++ b/index.html
@@ -36,21 +36,273 @@
   <!-- SITE MAIN  -->
 
   <main class="main-content">
-      <div class="container">
-             <form class="filters" action="https://echo.htmlacademy.ru" method="get" >
-                   <input class="filter-search-input" type="search" name="search" placeholder="Search for a country…" aria-label="Country name" required>
-                   <select class="filter-region-select" name="region" aria-label="Region">
-                    <option selected disabled >Filter by Region</option>
-                       <option>Brazil</option>
-                       <option>Amerika</option>
-                       <option>Iceland</option>
-                       <option>Asia</option>
-                       <option>Europa</option>
-                       <option>Oceania</option>
-                   </select>
-             </form>
-      </div>
+    <!-- SECTION HEADER  -->
+
+      <section class="section-header">
+        <div class="container">
+               <form class="filters" action="https://echo.htmlacademy.ru" method="get" >
+                     <input class="filter-search-input" type="search" name="search" placeholder="Search for a country…" aria-label="Country name" required>
+                     <select class="filter-region-select" name="region" aria-label="Region">
+                      <option selected disabled >Filter by Region</option>
+                         <option>Brazil</option>
+                         <option>Amerika</option>
+                         <option>Iceland</option>
+                         <option>Asia</option>
+                         <option>Europa</option>
+                         <option>Oceania</option>
+                     </select>
+               </form>
+        </div>
+      </section>
+
+             <!-- INDEX COUNTRIES  -->
+           <section class="index-countries">
+<div class="container">
+
+              <!-- <h2>Countries</h2> -->
+               <ul class="index-countries-list">
+
+                <!-- ITEM 1 -->
+                <li class="index-list-item">
+                  <div class="wrapper-item">
+                       <img class="index-item-img" src="img/flag-germany.jpg" alt="img-Germany" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
+                          <h3 class="index-footer-heading">Germany</h3>
+                          <!-- INDEX FOOTER  -->
+                          <div class="index-footer-wrapper">
+                              <dl class="index-footer-list">
+                                <!-- FOOTER 1 -->
+                                <div class="index-footer-item">
+                                  <dt class="index-footer-term">Population:</dt>
+                                   <dd class="index-footer-term-definition"> 81,770,900</dd>
+                                </div>
+                                  <!-- FOOTER 1 -->
+                                  <div class="index-footer-item">
+                                    <dt class="index-footer-term">Region:</dt>
+                                     <dd class="index-footer-term-definition">Europe</dd>
+                                  </div>
+                                    <!-- FOOTER 1 -->
+                                <div class="index-footer-item">
+                                  <dt class="index-footer-term">Capital:</dt>
+                                   <dd class="index-footer-term-definition">Berlin</dd>
+                                </div>
+                              </dl>
+                          </div>
+                  </div>
+                </li>
+
+
+                  <!-- ITEM 2 -->
+                  <li class="index-list-item">
+                    <div class="wrapper-item">
+                         <img class="index-item-img" src="img/flag-usa.jpg" alt="img-usa" srcset="img/flag-usa.jpg 1x,img/flag-usa@2x.jpg 2x">
+                            <h3 class="index-footer-heading">United States of America</h3>
+                            <!-- INDEX FOOTER  -->
+                            <div class="index-footer-wrapper">
+                                <dl class="index-footer-list">
+                                  <!-- FOOTER 1 -->
+                                  <div class="index-footer-item">
+                                    <dt class="index-footer-term">Population:</dt>
+                                     <dd class="index-footer-term-definition">323,947,000</dd>
+                                  </div>
+                                    <!-- FOOTER 1 -->
+                                    <div class="index-footer-item">
+                                      <dt class="index-footer-term">Region:</dt>
+                                       <dd class="index-footer-term-definition">Americas</dd>
+                                    </div>
+                                      <!-- FOOTER 1 -->
+                                  <div class="index-footer-item">
+                                    <dt class="index-footer-term">Capital:</dt>
+                                     <dd class="index-footer-term-definition">Washington, D.C.</dd>
+                                  </div>
+                                </dl>
+                            </div>
+                    </div>
+                  </li>
+
+  <!-- ITEM 3 -->
+  <li class="index-list-item">
+    <div class="wrapper-item">
+         <img class="index-item-img" src="img/flag-brazil.jpg" alt="img-brazil" srcset="img/flag-brazil.jpg 1x, img/flag-brazil@2x.jpg 2x">
+            <h3 class="index-footer-heading">Brazil</h3>
+            <!-- INDEX FOOTER  -->
+            <div class="index-footer-wrapper">
+                <dl class="index-footer-list">
+                  <!-- FOOTER 1 -->
+                  <div class="index-footer-item">
+                    <dt class="index-footer-term">Population:</dt>
+                     <dd class="index-footer-term-definition">206,135,893</dd>
+                  </div>
+                    <!-- FOOTER 1 -->
+                    <div class="index-footer-item">
+                      <dt class="index-footer-term">Region:</dt>
+                       <dd class="index-footer-term-definition">Americas</dd>
+                    </div>
+                      <!-- FOOTER 1 -->
+                  <div class="index-footer-item">
+                    <dt class="index-footer-term">Capital:</dt>
+                     <dd class="index-footer-term-definition">Brasília</dd>
+                  </div>
+                </dl>
+            </div>
+    </div>
+  </li>
+
+                             <!-- ITEM 4 -->
+                <li class="index-list-item">
+                  <div class="wrapper-item">
+                       <img class="index-item-img" src="img/flag-iceland.jpg" alt="img-iceland" srcset="img/flag-iceland.jpg 1x, img/flag-iceland@2x.jpg 2x">
+                          <h3 class="index-footer-heading">Iceland</h3>
+                          <!-- INDEX FOOTER  -->
+                          <div class="index-footer-wrapper">
+                              <dl class="index-footer-list">
+                                <!-- FOOTER 1 -->
+                                <div class="index-footer-item">
+                                  <dt class="index-footer-term">Population:</dt>
+                                   <dd class="index-footer-term-definition"> 334,300</dd>
+                                </div>
+                                  <!-- FOOTER 1 -->
+                                  <div class="index-footer-item">
+                                    <dt class="index-footer-term">Region:</dt>
+                                     <dd class="index-footer-term-definition">Europe</dd>
+                                  </div>
+                                    <!-- FOOTER 1 -->
+                                <div class="index-footer-item">
+                                  <dt class="index-footer-term">Capital:</dt>
+                                   <dd class="index-footer-term-definition"> Reykjavík</dd>
+                                </div>
+                              </dl>
+                          </div>
+                  </div>
+                </li>
+
+
+  <!-- ITEM 5 -->
+  <li class="index-list-item">
+    <div class="wrapper-item">
+         <img class="index-item-img" src="img/flag-afgan.jpg" alt="img-afgan" srcset="img/flag-afgan.jpg 1x , img/flag-afgan@2x.jpg 2x">
+            <h3 class="index-footer-heading">Afghanistan</h3>
+            <!-- INDEX FOOTER  -->
+            <div class="index-footer-wrapper">
+                <dl class="index-footer-list">
+                  <!-- FOOTER 1 -->
+                  <div class="index-footer-item">
+                    <dt class="index-footer-term">Population:</dt>
+                     <dd class="index-footer-term-definition"> 27,657,145</dd>
+                  </div>
+                    <!-- FOOTER 1 -->
+                    <div class="index-footer-item">
+                      <dt class="index-footer-term">Region:</dt>
+                       <dd class="index-footer-term-definition"> Asia</dd>
+                    </div>
+                      <!-- FOOTER 1 -->
+                  <div class="index-footer-item">
+                    <dt class="index-footer-term">Capital:</dt>
+                     <dd class="index-footer-term-definition">Kabul</dd>
+                  </div>
+                </dl>
+            </div>
+    </div>
+  </li>
+
+  <!-- ITEM 6 -->
+  <li class="index-list-item">
+    <div class="wrapper-item">
+         <img class="index-item-img" src="img/flag-alandIslands.jpg" alt="img-aland-Island" srcset="img/flag-alandIslands.jpg 1x ,img/flag-alandIslands@2x.jpg 2x">
+            <h3 class="index-footer-heading">Åland Islands</h3>
+            <!-- INDEX FOOTER  -->
+            <div class="index-footer-wrapper">
+                <dl class="index-footer-list">
+                  <!-- FOOTER 1 -->
+                  <div class="index-footer-item">
+                    <dt class="index-footer-term">Population:</dt>
+                     <dd class="index-footer-term-definition">28,875</dd>
+                  </div>
+                    <!-- FOOTER 1 -->
+                    <div class="index-footer-item">
+                      <dt class="index-footer-term">Region:</dt>
+                       <dd class="index-footer-term-definition">Europe</dd>
+                    </div>
+                      <!-- FOOTER 1 -->
+                  <div class="index-footer-item">
+                    <dt class="index-footer-term">Capital:</dt>
+                     <dd class="index-footer-term-definition"> Mariehamn</dd>
+                  </div>
+                </dl>
+            </div>
+    </div>
+  </li>
+
+
+  <!-- ITEM 7 -->
+  <li class="index-list-item">
+    <div class="wrapper-item">
+         <img class="index-item-img" src="img/flag-albaniya.jpg" alt="img-albaniya" srcset="img/flag-albaniya.jpg 1x, img/flag-albaniya@2x.jpg 2x">
+            <h3 class="index-footer-heading">Albania</h3>
+            <!-- INDEX FOOTER  -->
+            <div class="index-footer-wrapper">
+                <dl class="index-footer-list">
+                  <!-- FOOTER 1 -->
+                  <div class="index-footer-item">
+                    <dt class="index-footer-term">Population:</dt>
+                     <dd class="index-footer-term-definition"> 2,886,026</dd>
+                  </div>
+                    <!-- FOOTER 1 -->
+                    <div class="index-footer-item">
+                      <dt class="index-footer-term">Region:</dt>
+                       <dd class="index-footer-term-definition">Europe</dd>
+                    </div>
+                      <!-- FOOTER 1 -->
+                  <div class="index-footer-item">
+                    <dt class="index-footer-term">Capital:</dt>
+                     <dd class="index-footer-term-definition">Tirana</dd>
+                  </div>
+                </dl>
+            </div>
+    </div>
+  </li>
+
+
+  <!-- ITEM 8 -->
+  <li class="index-list-item">
+    <div class="wrapper-item">
+         <img class="index-item-img" src="img/flag-algeria.jpg" alt="img-algeriya" srcset="img/flag-algeria.jpg 1x, img/flag-algeria@2x.jpg 2x">
+            <h3 class="index-footer-heading">Algeria</h3>
+            <!-- INDEX FOOTER  -->
+            <div class="index-footer-wrapper">
+                <dl class="index-footer-list">
+                  <!-- FOOTER 1 -->
+                  <div class="index-footer-item">
+                    <dt class="index-footer-term">Population:</dt>
+                     <dd class="index-footer-term-definition">40,400,000</dd>
+                  </div>
+                    <!-- FOOTER 1 -->
+                    <div class="index-footer-item">
+                      <dt class="index-footer-term">Region:</dt>
+                       <dd class="index-footer-term-definition">Africa</dd>
+                    </div>
+                      <!-- FOOTER 1 -->
+                  <div class="index-footer-item">
+                    <dt class="index-footer-term">Capital:</dt>
+                     <dd class="index-footer-term-definition">Algiers</dd>
+                  </div>
+                </dl>
+            </div>
+    </div>
+  </li>
+
+
+               </ul>
+</div>
+
+           </section>
+
   </main>
+
+
+
+
+
+
 
 
   <script src="js/main.js"></script>
