Add site index styles

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <li class="index-list-item">
                   <div class="wrapper-item">
                        <img class="index-item-img" src="img/flag-germany.jpg" alt="img-Germany" srcset="img/flag-germany.jpg 1x, img/flag-germany@2x.jpg 2x">
-                          <h3 class="index-footer-heading">Germany</h3>
+                          <h3 class="index-footer-heading"><a class="index-heading-link" href="country.html">Germany</a></h3>
                           <!-- INDEX FOOTER  -->
                           <div class="index-footer-wrapper">
                               <dl class="index-footer-list">
@@ -95,7 +95,7 @@
                   <li class="index-list-item">
                     <div class="wrapper-item">
                          <img class="index-item-img" src="img/flag-usa.jpg" alt="img-usa" srcset="img/flag-usa.jpg 1x,img/flag-usa@2x.jpg 2x">
-                            <h3 class="index-footer-heading">United States of America</h3>
+                            <h3 class="index-footer-heading"><a class="index-heading-link" href="country.html">United States of America</a></h3>
                             <!-- INDEX FOOTER  -->
                             <div class="index-footer-wrapper">
                                 <dl class="index-footer-list">
@@ -123,7 +123,7 @@
   <li class="index-list-item">
     <div class="wrapper-item">
          <img class="index-item-img" src="img/flag-brazil.jpg" alt="img-brazil" srcset="img/flag-brazil.jpg 1x, img/flag-brazil@2x.jpg 2x">
-            <h3 class="index-footer-heading">Brazil</h3>
+            <h3 class="index-footer-heading"><a class="index-heading-link" href="country.html">Brazil</a></h3>
             <!-- INDEX FOOTER  -->
             <div class="index-footer-wrapper">
                 <dl class="index-footer-list">
@@ -151,7 +151,7 @@
                 <li class="index-list-item">
                   <div class="wrapper-item">
                        <img class="index-item-img" src="img/flag-iceland.jpg" alt="img-iceland" srcset="img/flag-iceland.jpg 1x, img/flag-iceland@2x.jpg 2x">
-                          <h3 class="index-footer-heading">Iceland</h3>
+                          <h3 class="index-footer-heading"><a class="index-heading-link" href="country.html">Iceland</a></h3>
                           <!-- INDEX FOOTER  -->
                           <div class="index-footer-wrapper">
                               <dl class="index-footer-list">
@@ -180,7 +180,7 @@
   <li class="index-list-item">
     <div class="wrapper-item">
          <img class="index-item-img" src="img/flag-afgan.jpg" alt="img-afgan" srcset="img/flag-afgan.jpg 1x , img/flag-afgan@2x.jpg 2x">
-            <h3 class="index-footer-heading">Afghanistan</h3>
+            <h3 class="index-footer-heading"><a class="index-heading-link" href="country.html">Afghanistan</a></h3>
             <!-- INDEX FOOTER  -->
             <div class="index-footer-wrapper">
                 <dl class="index-footer-list">
@@ -208,7 +208,7 @@
   <li class="index-list-item">
     <div class="wrapper-item">
          <img class="index-item-img" src="img/flag-alandIslands.jpg" alt="img-aland-Island" srcset="img/flag-alandIslands.jpg 1x ,img/flag-alandIslands@2x.jpg 2x">
-            <h3 class="index-footer-heading">Åland Islands</h3>
+            <h3 class="index-footer-heading"><a class="index-heading-link" href="country.html">Åland Islands</a></h3>
             <!-- INDEX FOOTER  -->
             <div class="index-footer-wrapper">
                 <dl class="index-footer-list">
@@ -237,7 +237,7 @@
   <li class="index-list-item">
     <div class="wrapper-item">
          <img class="index-item-img" src="img/flag-albaniya.jpg" alt="img-albaniya" srcset="img/flag-albaniya.jpg 1x, img/flag-albaniya@2x.jpg 2x">
-            <h3 class="index-footer-heading">Albania</h3>
+            <h3 class="index-footer-heading"><a class="index-heading-link" href="country.html">Albania</a></h3>
             <!-- INDEX FOOTER  -->
             <div class="index-footer-wrapper">
                 <dl class="index-footer-list">
@@ -266,7 +266,7 @@
   <li class="index-list-item">
     <div class="wrapper-item">
          <img class="index-item-img" src="img/flag-algeria.jpg" alt="img-algeriya" srcset="img/flag-algeria.jpg 1x, img/flag-algeria@2x.jpg 2x">
-            <h3 class="index-footer-heading">Algeria</h3>
+            <h3 class="index-footer-heading"><a class="index-heading-link" href="country.html">Algeria</a></h3>
             <!-- INDEX FOOTER  -->
             <div class="index-footer-wrapper">
                 <dl class="index-footer-list">
