Add detail country page

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                   <li class="index-list-item">
                     <div class="wrapper-item">
                          <img class="index-item-img" src="img/flag-usa.jpg" alt="img-usa" srcset="img/flag-usa.jpg 1x,img/flag-usa@2x.jpg 2x">
-                            <h3 class="index-footer-heading"><a class="index-heading-link" href="country.html">United States of America</a></h3>
+                            <h3 class="index-footer-heading"><a class="index-heading-link" href="country.html"><a class="flag-img-heading-link" href="page.html">United States of America</a></a></h3>
                             <!-- INDEX FOOTER  -->
                             <div class="index-footer-wrapper">
                                 <dl class="index-footer-list">
